# Primex_Web

./: .gitignore  pyproject.toml
apps/about_as/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/about_as/migrations/: 0001_initial.py
apps/faq/: admin.py  models.py  serializers.py  urls.py  views.py
apps/faq/migrations/: 0001_initial.py
apps/main_page/: admin.py  models.py  serializers.py  urls.py  views.py
apps/main_page/migrations/: 0001_initial.py
apps/news/: models.py  serializers.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py
apps/partners/: admin.py  models.py  serializers.py  urls.py  views.py
apps/partners/migrations/: 0001_initial.py
apps/services/: admin.py  models.py  serializers.py  urls.py  views.py
apps/services/migrations/: 0001_initial.py
apps/users/: managers.py  models.py  serializers.py  urls.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
